force-app/main/default/objects/Account/fields/Invoice_Email_Preference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Preference__c</fullName>
    <label>Email attachment preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All documents in one PDF sent in one email</fullName>
            </value>
            <value>
                <fullName>All documents in separate PDFs sent in one email</fullName>
            </value>
            <value>
                <fullName>All documents in separate PDFs sent in separate emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>