force-app/main/default/objects/Account/fields/Invoice_Emails__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Emails__c</fullName>
    <label>Invoice Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>