force-app/main/default/objects/Account/fields/Is_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Lead</label>
    <type>Checkbox</type>
</CustomField>