force-app/main/default/objects/Account/fields/Key_Account_Customer__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Account Customer</label>
    <type>Checkbox</type>
</CustomField>