force-app/main/default/objects/Account/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>