force-app/main/default/objects/Account/fields/Last_QBR__c.field-meta.xml
<CustomField>
    <fullName>Last_QBR__c</fullName>
    <label>Last QBR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q4_2017</fullName>
                <label>Q4 2017</label>
            </value>
            <value>
                <fullName>Q1_2018</fullName>
                <label>Q1 2018</label>
            </value>
            <value>
                <fullName>Q2_2018</fullName>
                <label>Q2 2018</label>
            </value>
            <value>
                <fullName>Q3_2018</fullName>
                <label>Q3 2018</label>
            </value>
            <value>
                <fullName>Q4 2018</fullName>
            </value>
            <value>
                <fullName>Q1 2019</fullName>
            </value>
            <value>
                <fullName>Q2 2019</fullName>
            </value>
            <value>
                <fullName>Q3 2019</fullName>
            </value>
            <value>
                <fullName>Q4 2019</fullName>
            </value>
            <value>
                <fullName>Q1 2020</fullName>
            </value>
            <value>
                <fullName>Q2 2020</fullName>
            </value>
            <value>
                <fullName>Q3 2020</fullName>
            </value>
            <value>
                <fullName>Q4 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>