force-app/main/default/objects/Account/fields/Link_to_Confluence__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Confluence__c</fullName>
    <label>Account Links</label>
    <type>Url</type>
</CustomField>