force-app/main/default/objects/Account/fields/Link_to_Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Jira_Ticket__c</fullName>
    <label>Link to Jira Ticket</label>
    <type>Url</type>
</CustomField>