force-app/main/default/objects/Account/fields/Lock_status__c.field-meta.xml
<CustomField>
    <fullName>Lock_status__c</fullName>
    <label>Lock status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Not Locked</fullName>
            </value>
            <value>
                <fullName>Billing Automated</fullName>
                <isActive>false</isActive>
                <label>Billing Automated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>