force-app/main/default/objects/Account/fields/Managed_by_T1_Agency__c.field-meta.xml
<CustomField>
    <fullName>Managed_by_T1_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Applicable if it is managed by Tier 1 agency</inlineHelpText>
    <label>Managed by T1 Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Managed by T1 Agency)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>