force-app/main/default/objects/Account/fields/Media_Purchasing_History__c.field-meta.xml
<CustomField>
    <fullName>Media_Purchasing_History__c</fullName>
    <inlineHelpText>Used for narrative about past media purchasing bias.</inlineHelpText>
    <label>Media Purchasing History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>