force-app/main/default/objects/Account/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New partner integration</fullName>
            </value>
            <value>
                <fullName>Validity check</fullName>
            </value>
            <value>
                <fullName>Sign mutual NDA</fullName>
            </value>
            <value>
                <fullName>Send out RFI and collect all required information</fullName>
            </value>
            <value>
                <fullName>Assess the data provided &amp; evaluate the technical integration</fullName>
            </value>
            <value>
                <fullName>Build the business case &amp; assess the service</fullName>
            </value>
            <value>
                <fullName>Work out T&amp;C and get them signed</fullName>
            </value>
            <value>
                <fullName>Organize technical kick off and do the integration &amp; testing</fullName>
            </value>
            <value>
                <fullName>Work with Marketing</fullName>
            </value>
            <value>
                <fullName>Ongoing Evaluation (QBR) with strategic partner</fullName>
            </value>
            <value>
                <fullName>Integration completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>