force-app/main/default/objects/Account/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if an MSA is in place. System automation stamps this field if the parent Account on the record has this field checked.</inlineHelpText>
    <label>MSA?</label>
    <type>Checkbox</type>
</CustomField>