force-app/main/default/objects/Account/fields/Navision_Base_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Navision_Base_Unit_of_Measure__c</fullName>
    <label>Navision Base Unit of Measure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUDGET</fullName>
            </value>
            <value>
                <fullName>CAMP.</fullName>
            </value>
            <value>
                <fullName>CLICKS</fullName>
            </value>
            <value>
                <fullName>DAYS</fullName>
            </value>
            <value>
                <fullName>HOURS</fullName>
            </value>
            <value>
                <fullName>IMPR</fullName>
            </value>
            <value>
                <fullName>MONTH</fullName>
            </value>
            <value>
                <fullName>UNIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>