force-app/main/default/objects/Account/fields/Navision_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Navision_Payment_Terms__c</fullName>
    <label>Navision Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>