force-app/main/default/objects/Account/fields/NavisionID__c.field-meta.xml
<CustomField>
    <fullName>NavisionID__c</fullName>
    <externalId>true</externalId>
    <label>Navision ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>