force-app/main/default/objects/Account/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kikc-off call</fullName>
                <label>Kick-off call</label>
            </value>
            <value>
                <fullName>Sign NDA</fullName>
            </value>
            <value>
                <fullName>Check with tech team on feasibility of the integration</fullName>
            </value>
            <value>
                <fullName>Technical Kick-off call</fullName>
            </value>
            <value>
                <fullName>Sign T&amp;C</fullName>
            </value>
            <value>
                <fullName>Connect with Marketing to discuss suitable activities</fullName>
            </value>
            <value>
                <fullName>Partner specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>