force-app/main/default/objects/Account/fields/Not_use__c.field-meta.xml
<CustomField>
    <fullName>Not_use__c</fullName>
    <description>Adform products already being used</description>
    <label>Not use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>RTB</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>DCO</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>