force-app/main/default/objects/Account/fields/Number_of_Countries_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Countries_Available__c</fullName>
    <inlineHelpText>Add a number</inlineHelpText>
    <label>Number of Countries Operating In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>