force-app/main/default/objects/Account/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>TEXT( Owner.Office__c  )</formula>
    <label>Office</label>
    <type>Text</type>
</CustomField>