force-app/main/default/objects/Account/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <formula>if(LEN(Office_Street__c)&gt;0, Office_Street__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Office_City__c)&gt;0, Office_City__c&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Office_State__c)&gt;0, Office_State__c&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Office_Postal_Code__c)&gt;0, Office_Postal_Code__c,&quot;&quot;) &amp; BR() &amp;
If(LEN(Text(Office_Country__c)) &gt;0, Text(Office_Country__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Address</label>
    <type>Text</type>
</CustomField>