force-app/main/default/objects/Account/fields/Office_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Postal_Code__c</fullName>
    <label>Office Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>