force-app/main/default/objects/Account/fields/Office_Street__c.field-meta.xml
<CustomField>
    <fullName>Office_Street__c</fullName>
    <label>Office Street</label>
    <type>TextArea</type>
</CustomField>