force-app/main/default/objects/Account/fields/Operational_Mode__c.field-meta.xml
<CustomField>
    <fullName>Operational_Mode__c</fullName>
    <label>Operational Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-service</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Fully-Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>