force-app/main/default/objects/Account/fields/Operational_Phase__c.field-meta.xml
<CustomField>
    <fullName>Operational_Phase__c</fullName>
    <label>Operational Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan/Pitch</fullName>
            </value>
            <value>
                <fullName>Implement</fullName>
            </value>
            <value>
                <fullName>Measure/Service</fullName>
            </value>
            <value>
                <fullName>Grow/Upsell</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>