force-app/main/default/objects/Account/fields/Operational_Team__c.field-meta.xml
<CustomField>
    <fullName>Operational_Team__c</fullName>
    <label>Operational Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional PSX</fullName>
                <default>true</default>
                <label>Regional PSX</label>
            </value>
            <value>
                <fullName>Global PSL</fullName>
            </value>
            <value>
                <fullName>Central PSX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>