force-app/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Data</fullName>
                <isActive>false</isActive>
                <label>3rd Party Data</label>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>Brand Safety</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Data Provider</fullName>
            </value>
            <value>
                <fullName>DCO Tools</fullName>
            </value>
            <value>
                <fullName>DMPs in Adform DMP</fullName>
            </value>
            <value>
                <fullName>DOOH</fullName>
            </value>
            <value>
                <fullName>DOOH Supply</fullName>
                <isActive>false</isActive>
                <label>DOOH Supply</label>
            </value>
            <value>
                <fullName>DSPs in Adform DMP</fullName>
            </value>
            <value>
                <fullName>DSPs in Adform DSP</fullName>
                <isActive>false</isActive>
                <label>DSPs in Adform DSP</label>
            </value>
            <value>
                <fullName>DSPs in Adform SSP</fullName>
            </value>
            <value>
                <fullName>Email/ Martech</fullName>
            </value>
            <value>
                <fullName>Ext. Demand</fullName>
                <isActive>false</isActive>
                <label>Ext. Demand</label>
            </value>
            <value>
                <fullName>Ext. DMP</fullName>
                <isActive>false</isActive>
                <label>Ext. DMP</label>
            </value>
            <value>
                <fullName>Ext. Supply</fullName>
                <isActive>false</isActive>
                <label>Ext. Supply</label>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Fraud Detection</fullName>
                <isActive>false</isActive>
                <label>Fraud Detection</label>
            </value>
            <value>
                <fullName>Measurement/ Verification</fullName>
                <isActive>false</isActive>
                <label>Measurement/ Verification</label>
            </value>
            <value>
                <fullName>Panel Verification Partner</fullName>
            </value>
            <value>
                <fullName>Personalisation</fullName>
            </value>
            <value>
                <fullName>Research/ Audience Verification</fullName>
                <isActive>false</isActive>
                <label>Research/ Audience Verification</label>
            </value>
            <value>
                <fullName>SSPs on Adform DSPs</fullName>
            </value>
            <value>
                <fullName>Tracking/Measurement Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>