force-app/main/default/objects/Account/fields/Potential_Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Spend__c</fullName>
    <label>Potential Net Rev. YOY (EUR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-50K</fullName>
                <label>EUR 0.00 - EUR 50,000.00</label>
            </value>
            <value>
                <fullName>50K-100K</fullName>
                <label>EUR 50,000.00 - EUR 100,000.00</label>
            </value>
            <value>
                <fullName>100-200K</fullName>
                <label>EUR 100,000.00 - EUR 200,000.00</label>
            </value>
            <value>
                <fullName>200K - 300K</fullName>
                <label>EUR 200,000.00 - EUR 300,000.00</label>
            </value>
            <value>
                <fullName>300K - 400K</fullName>
                <label>EUR 300,000.00 - EUR 400,000.00</label>
            </value>
            <value>
                <fullName>400K - 500K</fullName>
                <label>EUR 400,000.00 - EUR 500,000.00</label>
            </value>
            <value>
                <fullName>500K-1M</fullName>
                <label>EUR 500,000.00 - EUR 750,000.00</label>
            </value>
            <value>
                <fullName>750k - 1M</fullName>
                <label>EUR 750,000.00 - EUR 1,000,000.00</label>
            </value>
            <value>
                <fullName>1M+</fullName>
                <label>&gt; EUR 1,000,000.00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>