force-app/main/default/objects/Account/fields/Pre_payment__c.field-meta.xml
<CustomField>
    <fullName>Pre_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-payment</label>
    <type>Checkbox</type>
</CustomField>