force-app/main/default/objects/Account/fields/Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_of_Interest__c</fullName>
    <inlineHelpText>If this Account derived from a Lead record conversion, the values here can be used to populate initial Opportunity Product records.</inlineHelpText>
    <label>Products of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Creative Solution</label>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>DCO</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Full stack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>