force-app/main/default/objects/Account/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add publisher associated with Accout</description>
    <label>Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>