force-app/main/default/objects/Account/fields/Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Number__c</fullName>
    <inlineHelpText>Please enter the registered number for Contract purposes.</inlineHelpText>
    <label>Registered Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>