force-app/main/default/objects/Account/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <inlineHelpText>Prospect – new customer
Trial agreement – in a test phase with no MSA signed
Signed – not yet spending
Active – contract signed and spending
Inactive – contract signed, not spending anymore
Rejected – not under contract due to legal or other reasons</inlineHelpText>
    <label>Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Trial Agreement</fullName>
            </value>
            <value>
                <fullName>On Contract</fullName>
                <label>Signed</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>