force-app/main/default/objects/Account/fields/Relationship_status_BD__c.field-meta.xml
<CustomField>
    <fullName>Relationship_status_BD__c</fullName>
    <label>Relationship status BD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Trial Agreement</fullName>
            </value>
            <value>
                <fullName>Active Contract</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>