force-app/main/default/objects/Account/fields/Relationship_Status_DEPRICATED__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status_DEPRICATED__c</fullName>
    <formula>IF( Total_Open_Opportunities__c + Total_Won_Opportunities__c = 0,
&quot;Prospecting&quot;,
&quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Status_DEPRICATED</label>
    <type>Text</type>
</CustomField>