force-app/main/default/objects/Account/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>Advertiser</fullName>
            </value>
            <value>
                <fullName>Creative Agency</fullName>
            </value>
            <value>
                <fullName>Consultancy Partner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Standalone Agency</fullName>
            </value>
            <value>
                <fullName>Trading Desk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>