force-app/main/default/objects/Account/fields/Reminder_Emails__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Emails__c</fullName>
    <label>Reminder Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>