force-app/main/default/objects/Account/fields/Reminder_Emails_CC__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Emails_CC__c</fullName>
    <label>Reminder Emails CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>