force-app/main/default/objects/Account/fields/Reminder_terms_code__c.field-meta.xml
<CustomField>
    <fullName>Reminder_terms_code__c</fullName>
    <label>Reminder terms code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>