force-app/main/default/objects/Account/fields/Requested_Tier__c.field-meta.xml
<CustomField>
    <fullName>Requested_Tier__c</fullName>
    <label>Requested Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>