force-app/main/default/objects/Account/fields/Responsible_Account_Manger__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Account_Manger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager/Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>