force-app/main/default/objects/Account/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <label>Responsible Person on the Invoice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>